--- a/index.html
+++ b/index.html
@@ -22,13 +22,31 @@
         <div class="site-wrapper">
 
             <center>
-                <a href="https://www.github.com/stristo/stristo">
-                    <img src="assets/img/logo.png" width="200px" />
-                </a>
+                <div class="row logo-wrapper">
+                    <a href="https://www.github.com/stristo/stristo">
+                        <img src="assets/img/logo.png" width="200px" />
+                    </a>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="input-group input-group-lg input-group-transparent">
+                            <span class="input-group-addon">Message</span>
+                            <input type="text" class="form-control" placeholder="Hello darkness my old friend." aria-describedby="basic-addon1">
+                        </div>
+                        <div class="input-group input-group-lg input-group-transparent">
+                            <span class="input-group-addon">Token</span>
+                            <input type="text" class="form-control" placeholder="2f4936fa-912e-11e5-8994-feff819cdc9f" aria-describedby="basic-addon1">
+                        </div>
+                        <button type="button" class="btn btn-stristo btn-lg">
+                            Receive Message
+                        </button>
+                    </div>
+                </div>
             </center>
 
-            <hr />
+
             <footer>
+                <hr />
                 <div class="row">
                     <div class="col-md-6">
                         Stristo <i class="fa fa-copyright"></i> 2015
