--- a/index.html
+++ b/index.html
@@ -20,30 +20,32 @@
     </head>
     <body>
         <div class="site-wrapper">
-
-            <center>
-                <div class="row logo-wrapper">
+            <div class="row logo-wrapper">
+                <div class="col-md-2">
                     <a href="https://www.github.com/stristo/stristo">
                         <img src="assets/img/logo.png" width="200px" />
                     </a>
                 </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="input-group input-group-lg input-group-transparent">
-                            <span class="input-group-addon">Message</span>
-                            <input type="text" class="form-control" placeholder="Hello darkness my old friend." aria-describedby="basic-addon1">
-                        </div>
-                        <div class="input-group input-group-lg input-group-transparent">
-                            <span class="input-group-addon">Token</span>
-                            <input type="text" class="form-control" placeholder="2f4936fa-912e-11e5-8994-feff819cdc9f" aria-describedby="basic-addon1">
-                        </div>
-                        <button type="button" class="btn btn-stristo btn-lg">
-                            Receive Message
-                        </button>
-                    </div>
+                <div class="col-md-10 text-left">
+                    <h1>Stristo / One token, endless communication</h1>
                 </div>
-            </center>
+            </div>
 
+            <div class="row">
+                <div class="col-md-12 col-centered">
+                    <div class="input-group input-group-lg input-group-transparent col-centered">
+                        <span class="input-group-addon">Message</span>
+                        <input type="text" class="form-control" placeholder="Hello darkness my old friend." aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group input-group-lg input-group-transparent col-centered">
+                        <span class="input-group-addon">Token</span>
+                        <input type="text" class="form-control" placeholder="2f4936fa-912e-11e5-8994-feff819cdc9f" aria-describedby="basic-addon1">
+                    </div>
+                    <button type="button" class="btn btn-stristo btn-lg">
+                        Receive Message
+                    </button>
+                </div>
+            </div>
 
             <footer>
                 <hr />
